# odbc-safe

./: .travis.yml  Cargo.toml  Changelog.md  LICENSE  README.md
examples/: affected_row_count.rs  bind_columns.rs  bind_parameter.rs  list_datasources.rs  list_drivers.rs  prepared_query.rs  print_table.rs  transactions.rs
src/: c_data_type.rs  connection.rs  data_source.rs  data_type.rs  diagnostics.rs  environment.rs  indicator.rs  input_buffer.rs  lib.rs  output_buffer.rs  return_.rs  return_nodata.rs  return_option.rs  sql_str.rs  statement.rs  target.rs  to_buffer_length_ext.rs  version.rs
src/data_source/: connected.rs  hdbc_wrapper.rs  mod.rs  unconnected.rs
src/handles/: disconnector.rs  hdbc.rs  henv.rs  hstmt.rs  mod.rs
tests/: lib.rs
travis/: odbc.ini  setup.sql
