[package]
name = "odbc-safe"
description = "Write low level, fast ODBC Applications in safe Rust."
version = "0.5.0"
authors = ["Markus Klein <markus-klein@live.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pacman82/odbc-safe"
homepage = "https://github.com/pacman82/odbc-safe"
keywords = ["odbc", "database", "sql"]
categories = ["api-bindings", "database"]

[dependencies]
odbc-sys = "0.8.2"

[features]
default = []
travis = []

[badges]
travis-ci = { repository = "pacman82/odbc-safe", branch = "master" }
